--- a/projects/vs2019/ricochet_cdll.vcxproj
+++ b/projects/vs2019/ricochet_cdll.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="..\..\ricochet\cl_dll\com_weapons.cpp" />
     <ClCompile Include="..\..\ricochet\cl_dll\death.cpp" />
     <ClCompile Include="..\..\ricochet\cl_dll\demo.cpp" />
+    <ClCompile Include="..\..\ricochet\cl_dll\discord\discord_manager.cpp" />
     <ClCompile Include="..\..\ricochet\cl_dll\entity.cpp" />
     <ClCompile Include="..\..\ricochet\cl_dll\events.cpp" />
     <ClCompile Include="..\..\ricochet\cl_dll\ev_common.cpp" />
@@ -87,6 +88,9 @@
     <ClInclude Include="..\..\ricochet\cl_dll\cl_util.h" />
     <ClInclude Include="..\..\ricochet\cl_dll\com_weapons.h" />
     <ClInclude Include="..\..\ricochet\cl_dll\demo.h" />
+    <ClInclude Include="..\..\ricochet\cl_dll\discord\discord_manager.h" />
+    <ClInclude Include="..\..\ricochet\cl_dll\discord\discord_register.h" />
+    <ClInclude Include="..\..\ricochet\cl_dll\discord\discord_rpc.h" />
     <ClInclude Include="..\..\ricochet\cl_dll\eventscripts.h" />
     <ClInclude Include="..\..\ricochet\cl_dll\ev_hldm.h" />
     <ClInclude Include="..\..\ricochet\cl_dll\GameStudioModelRenderer.h" />
@@ -197,7 +201,7 @@ call ..\..\filecopy.bat $(TargetDir)\$(TargetName).pdb ..\..\..\game\mod\cl_dlls
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;CLIENT_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>..\..\ricochet;..\..\ricochet\dlls;..\..\ricochet\cl_dll;..\..\game_shared;..\..\engine;..\..\public;..\..\common;..\..\ricochet\pm_shared;..\..\utils\vgui\include;..\..\external;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\localization-halflife\utils\discord\lib;E:\localization-halflife\lib\public;..\..\ricochet;..\..\ricochet\dlls;E:\localization-halflife\ricochet\cl_dll\discord;..\..\ricochet\cl_dll;..\..\game_shared;..\..\engine;..\..\public;..\..\common;..\..\ricochet\pm_shared;..\..\utils\vgui\include;..\..\external;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -205,7 +209,7 @@ call ..\..\filecopy.bat $(TargetDir)\$(TargetName).pdb ..\..\..\game\mod\cl_dlls
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>..\..\utils\vgui\lib\win32_vc16\vgui.lib;wsock32.lib;..\..\lib\public\sdl2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\..\utils\vgui\lib\win32_vc16\vgui.lib;wsock32.lib;..\..\lib\public\sdl2.lib;..\..\utils\discord\lib\discord-rpc.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <BaseAddress>
       </BaseAddress>
     </Link>
