--- a/projects/vs2019/ricochet_cdll.vcxproj.filters
+++ b/projects/vs2019/ricochet_cdll.vcxproj.filters
@@ -395,5 +395,8 @@
     <ClInclude Include="..\..\ricochet\cl_dll\discord\discord_rpc.h">
       <Filter>Source Files\ricochet\cl_dll\discord</Filter>
     </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>Header Files\ricochet\cl_dll</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
