--- a/projects/vs2019/ricochetdll.vcxproj.filters
+++ b/projects/vs2019/ricochetdll.vcxproj.filters
@@ -335,5 +335,11 @@
     <ClInclude Include="..\..\common\Platform.h">
       <Filter>Header Files\common</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\ricochet\dlls\disc_objects.h">
+      <Filter>Header Files\ricochet\dlls</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\ricochet\dlls\disc_weapon.h">
+      <Filter>Header Files\ricochet\dlls</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
