bug fixes, discord rpc changes, added schizophrenia, and server and client settings

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ projects/vs2019/.vs/projects/v17/DocumentLayout.backup.json
 projects/vs2019/.vs/projects/v17/Browse.VC.db-shm
 /projects/vs2019/.vs/projects/v17
 /projects/vs2019/.vs
+projects/vs2019/.vs/projects/v17/Browse.VC.db
